--- a/addons/gene_base/views/menu.xml
+++ b/addons/gene_base/views/menu.xml
@@ -4,11 +4,26 @@
 
         <menuitem id="gene_root" name="基因工程" sequence="1"/>
         <menuitem id="gene_categ" name="基因匯入" parent="gene_root" sequence=""/>
-         <menuitem id="subject_base_menu"
+        <menuitem id="sample_base_menu"
+                  name="檢體資料"
+                  parent="gene_categ"
+                  action="sample_base_action"
+                  sequence="1"/>
+        <menuitem id="subject_base_menu"
                   name="受測者資料"
                   parent="gene_categ"
                   action="subject_base_action"
-                  sequence="1"/>
+                  sequence="2"/>
+        <menuitem id="sequence_variation_table_menu"
+                  name="序列變異綜合表"
+                  parent="gene_categ"
+                  action="sequence_variation_table_action"
+                  sequence="3"/>
+        <menuitem id="gene_impact_menu"
+                  name="基因功能評估"
+                  parent="gene_categ"
+                  action="gene_impact_action"
+                  sequence="4"/>
         <menuitem id="gene_menu"
                   name="查看excel檔"
                   parent="gene_categ"
