--- a/addons/gene_base/views/menu.xml
+++ b/addons/gene_base/views/menu.xml
@@ -14,16 +14,16 @@
                   parent="cancer_categ"
                   action="subject_base_action"
                   sequence="2"/>
-        <menuitem id="sequence_variation_table_menu"
-                  name="序列變異綜合表"
-                  parent="cancer_categ"
-                  action="sequence_variation_table_action"
-                  sequence="3"/>
-        <menuitem id="gene_impact_menu"
-                  name="基因功能評估"
-                  parent="cancer_categ"
-                  action="gene_impact_action"
-                  sequence="4"/>
+        <!--<menuitem id="sequence_variation_table_menu"-->
+                  <!--name="序列變異綜合表"-->
+                  <!--parent="cancer_categ"-->
+                  <!--action="sequence_variation_table_action"-->
+                  <!--sequence="3"/>-->
+        <!--<menuitem id="gene_impact_menu"-->
+                  <!--name="基因功能評估"-->
+                  <!--parent="cancer_categ"-->
+                  <!--action="gene_impact_action"-->
+                  <!--sequence="4"/>-->
           <menuitem id="medicine_impact_menu"
                   name="藥物使用影響評估"
                   parent="cancer_categ"
