--- a/addons/gene_base/views/sample_base.xml
+++ b/addons/gene_base/views/sample_base.xml
@@ -20,6 +20,10 @@
             <field name="arch" type="xml">
                 <form>
                     <sheet>
+                        <header>
+                            <button name="import_gene_impact" string="匯入基因功能影響評估" type="object"/>
+                            <button name="delete_off_target_data" string="刪除基因評估有off_target的資料" type="object"/>
+                        </header>
                         <group col="4">
                             <field name="subject_code"/>
                             <field name="datelanded"/>
@@ -31,7 +35,7 @@
                         </group>
                         <notebook>
                             <page string="序列變異綜合表">
-                                <field name="squence_variation_code">
+                                <field name="sequence_variation_code">
 
                                 </field>
                             </page>
@@ -95,5 +99,16 @@
               </p>
             </field>
         </record>
+
+        <report
+            id="cancer_report"
+            model="sample.base"
+            string="癌症報告列印"
+            report_type="docx"
+            name="gene_base.cancer_report"
+            file="gene_base.cancer_report"
+            attachment_use="True"
+            attachment="123.doc"
+        />
     </data>
 </odoo>
