--- a/addons/gene_base/views/sample_base.xml
+++ b/addons/gene_base/views/sample_base.xml
@@ -20,56 +20,66 @@
             <field name="arch" type="xml">
                 <form>
                     <sheet>
-                        <header>
-                            <button name="import_gene_impact" string="匯入基因功能影響評估" type="object"/>
-                            <button name="delete_off_target_data" string="刪除基因評估有off_target的資料" type="object"/>
-                        </header>
-                        <group col="4">
-                            <field name="subject_code"/>
-                            <field name="datelanded"/>
-                        </group>
-                        <group col="7">
-                            <field name="sample_id"/>
-                            <field name="sample_num"/>
-                            <field name="sample_type" colspan="3"/>
-                        </group>
-                        <notebook>
-                            <page string="序列變異綜合表">
-                                <field name="sequence_variation_code">
+                        <div class="oe_button_box" name="button_box">
+                            <button name="import_sequence_variation" string="匯入序列變異"
+                                    type="object" class="oe_stat_button" icon="fa-upload">
+                            </button>
+                            <button name="import_gene_impact" string="匯入基因功能影響評估"
+                                    type="object" class="oe_stat_button" icon="fa-upload">
+                            </button>
+                            <button name="delete_off_target_data" string="刪除基因評估有off_target的資料"
+                                    type="object" class="oe_stat_button" icon="fa-book" >
+                            </button>
+                            <button name="delete_c_dna_field_c_point" string="去除基因功能序列說明的c."
+                                    type="object" class="oe_stat_button" icon="fa-book" >
+                            </button>
+                        </div>
+                        <!--<group col="4">-->
+                            <!--<field name="subject_code"/>-->
+                            <!--<field name="datelanded"/>-->
+                        <!--</group>-->
+                        <!--<group col="7">-->
+                            <!--<field name="sample_id"/>-->
+                            <!--<field name="sample_num"/>-->
+                            <!--<field name="sample_type" colspan="3"/>-->
+                        <!--</group>-->
+                        <!--<notebook>-->
+                            <!--<page string="序列變異綜合表">-->
+                                <!--<field name="sequence_variation_code">-->
 
-                                </field>
-                            </page>
-                            <page string="基因功能影響評估">
-                                <field name="gene_impact_code">
-                                </field>
-                            </page>
-                            <page string="藥物使用影響評估">
-                                <field name="medicine_impact_code">
-                                </field>
-                            </page>
-                             <page string="定序實驗結果說明">
-                                 <span STYLE='FONT-SIZE:25PX'>檢測結果摘要</span>
-                                 <group>
-                                    <field name="sequence_variation_text"/>
-                                    <field name="medicine_impact_text"/>
-                                    <field name="disease_prognosis_text"/>
-                                 </group>
-                                <group>
-                                    <field name="dna_source"/>
-                                    <field name="dna_method"/>
-                                    <field name="Continu_sequel_preparation"/>
-                                    <field name="sequence_platform"/>
-                                    <field name="sequence_mode"/>
-                                    <field name="preliminary_num"/>
-                                    <field name="comparison_database"/>
-                                    <field name="human_num"/>
-                                    <field name="human_percent"/>
-                                    <field name="target_num"/>
-                                    <field name="target_percent"/>
-                                    <field name="ten_percent_cover"/>
-                                </group>
-                            </page>
-                        </notebook>
+                                <!--</field>-->
+                            <!--</page>-->
+                            <!--<page string="基因功能影響評估">-->
+                                <!--<field name="gene_impact_code">-->
+                                <!--</field>-->
+                            <!--</page>-->
+                            <!--<page string="藥物使用影響評估">-->
+                                <!--<field name="medicine_impact_code">-->
+                                <!--</field>-->
+                            <!--</page>-->
+                             <!--<page string="定序實驗結果說明">-->
+                                 <!--<span STYLE='FONT-SIZE:25PX'>檢測結果摘要</span>-->
+                                 <!--<group>-->
+                                    <!--<field name="sequence_variation_text"/>-->
+                                    <!--<field name="medicine_impact_text"/>-->
+                                    <!--<field name="disease_prognosis_text"/>-->
+                                 <!--</group>-->
+                                <!--<group>-->
+                                    <!--<field name="dna_source"/>-->
+                                    <!--<field name="dna_method"/>-->
+                                    <!--<field name="Continu_sequel_preparation"/>-->
+                                    <!--<field name="sequence_platform"/>-->
+                                    <!--<field name="sequence_mode"/>-->
+                                    <!--<field name="preliminary_num"/>-->
+                                    <!--<field name="comparison_database"/>-->
+                                    <!--<field name="human_num"/>-->
+                                    <!--<field name="human_percent"/>-->
+                                    <!--<field name="target_num"/>-->
+                                    <!--<field name="target_percent"/>-->
+                                    <!--<field name="ten_percent_cover"/>-->
+                                <!--</group>-->
+                            <!--</page>-->
+                        <!--</notebook>-->
                     </sheet>
                 </form>
             </field>
