--- a/addons/gene_base/views/sequence_variation_table.xml
+++ b/addons/gene_base/views/sequence_variation_table.xml
@@ -11,10 +11,12 @@
                     <field name="total_sequence_variation"/>
                     <field name="SNV"/>
                     <field name="INDEL"/>
-                    <field name="MIS"/>
+                    <field name="M_SE"/>
+                    <field name="N_SE"/>
                     <field name="SYN"/>
                     <field name="UTR1"/>
                     <field name="UTR2"/>
+                    <field name="INGE"/>
                     <field name="INTR"/>
                     <field name="A"/>
                     <field name="B"/>
@@ -36,10 +38,12 @@
                             <field name="total_sequence_variation"/>
                             <field name="SNV"/>
                             <field name="INDEL"/>
-                            <field name="MIS"/>
+                            <field name="M_SE"/>
+                            <field name="N_SE"/>
                             <field name="SYN"/>
                             <field name="UTR1"/>
                             <field name="UTR2"/>
+                            <field name="INGE"/>
                             <field name="INTR"/>
                             <field name="A"/>
                             <field name="B"/>
