--- a/addons/gene_base/views/subject_base.xml
+++ b/addons/gene_base/views/subject_base.xml
@@ -7,9 +7,6 @@
             <field name="arch" type="xml">
                 <tree>
                     <field name="name"/>
-                    <field name="sex"/>
-                    <field name="age"/>
-                    <field name="case_description"/>
                 </tree>
             </field>
         </record>
@@ -20,12 +17,106 @@
             <field name="arch" type="xml">
                 <form>
                     <sheet>
-                        <group>
-                             <field name="name"/>
-                             <field name="sex"/>
-                             <field name="age"/>
-                             <field name="case_description"/>
+                         <div class="oe_button_box" name="button_box">
+                            <button name="import_sequence_variation" string="匯入序列變異"
+                                    type="object" class="oe_stat_button" icon="fa-upload">
+                            </button>
+                            <button name="import_gene_impact" string="匯入基因功能影響評估"
+                                    type="object" class="oe_stat_button" icon="fa-upload">
+                            </button>
+                            <button name="delete_off_target_data" string="刪除基因評估有off_target的資料"
+                                    type="object" class="oe_stat_button" icon="fa-book" >
+                            </button>
+                            <button name="delete_c_dna_field_c_point" string="去除基因功能序列說明的c."
+                                    type="object" class="oe_stat_button" icon="fa-book" >
+                            </button>
+                        </div>
+                        <group col="6">
+                            <field name="title_chi"/>
+                            <field name="title_eng"/>
+                            <field name="report_date"/>
                         </group>
+                        <notebook>
+                            <page string="受測者資料">
+                                <group col="6">
+                                    <field name="name"/>
+                                    <field name="sex"/>
+                                    <field name="birth"/>
+                                </group>
+                                 <group col="6">
+                                    <field name="id_card"/>
+                                    <field name="phone"/>
+                                    <field name="entrustment_company"/>
+                                </group>
+                                <group col="4">
+                                    <field name="address"/>
+                                    <field name="email"/>
+                                </group>
+                                <span STYLE='font-size:25px'>檢測項目</span>
+                                 <group col="8">
+                                    <field name="TSOne"/>
+                                    <field name="TSCancer"/>
+                                    <field name="TSColon"/>
+                                    <field name="BRCAL"/>
+                                    <field name="TSLung"/>
+                                    <field name="TSBreast"/>
+                                    <field name="Other_test"/>
+                                </group>
+                                <group col="2">
+                                    <field name="disease_text"/>
+                                </group>
+                            </page>
+                            <page string="檢測結果">
+                                <group col="6">
+                                    <field name="patient_number"/>
+                                    <field name="sample_number"/>
+                                    <field name="check_number"/>
+                                    <field name="execute_date"/>
+                                    <field name="submission_date"/>
+                                    <field name="receipt_date"/>
+                                </group>
+                                <span STYLE='font-size:25px'>檢測結果</span>
+                                <group col="2">
+                                    <field name="test_result"/>
+                                </group>
+                                <span STYLE='font-size:25px'>負責人</span>
+                                <group col="4">
+                                    <field name="lab_manager"/>
+                                    <field name="report_sign"/>
+                                </group>
+                            </page>
+                            <page string="序列變異綜合">
+                                <group>
+                                    <field name="sequence_variation_code"/>
+                                </group>
+                            </page>
+                            <page string="基因功能影響">
+                                <group>
+                                    <field name="gene_impact_code"/>
+                                </group>
+                            </page>
+                            <page string="定序實驗結果說明">
+                                <group col="4">
+                                    <field name="sample_id"/>
+                                    <field name="pathology"/>
+                                </group>
+                                <group col="4">
+                                    <field name="sample_resource_code"/>
+                                    <field name="DNA_extract_code"/>
+                                    <field name="sequence_set"/>
+                                    <field name="sequence_platform_code"/>
+                                    <field name="sequence_mode"/>
+                                    <field name="Prelim_lib"/>
+                                    <field name="Comparison_data"/>
+                                    <field name="human_reading"/>
+                                    <field name="human_percent"/>
+                                    <field name="target_reading"/>
+                                    <field name="target_percent"/>
+                                     <field name="sequence_cover"/>
+                                    <field name="lab_address"/>
+                                </group>
+                            </page>
+                        </notebook>
                     </sheet>
                 </form>
             </field>
@@ -37,7 +128,7 @@
             <field name="model">subject.base</field>
             <field name="arch" type="xml">
                 <search>
-                    <field name="name"/>
+
                 </search>
             </field>
         </record>
@@ -55,5 +146,16 @@
               </p>
             </field>
         </record>
+
+        <report
+            id="cancer_report"
+            model="subject.base"
+            string="癌症報告列印"
+            report_type="docx"
+            name="gene_base.cancer_report"
+            file="gene_base.cancer_report"
+            attachment_use="True"
+            attachment="123.doc"
+        />
     </data>
 </odoo>
